--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,156 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --container-color: #ffffff;
+  --git-detail-font-size: ;
+}
+
+body {
+  background-color: #ecf0f1;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.git-image img {
+  width: 125px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 70px;
+}
+
+.searchfield {
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  background: transparent;
+
+  padding: 0.25rem;
+
+  align-items: center;
+
+  box-shadow: inset 6px 6px 10px #d1d9e6, inset -6px -6px 10px #fff;
+
+  width: 300px;
+  /* background-color: var(--container-color); */
+  /* border-radius: 20px; */
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 43px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.searchfield input {
+  position: relative;
+  background-color: transparent;
+  margin: 15px;
+  font-size: 10px;
+  width: 250px;
+  text-align: center;
+  margin-left: auto;
+  padding-bottom: 8px;
+  margin-right: auto;
+  outline: 0;
+  border-width: 0 0 1px;
+  border-bottom: solid #201f1f;
+}
+.searchfield input:focus {
+  outline: none;
+  border-bottom: solid grey;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.profile-container {
+  border-radius: 1rem;
+
+  background: transparent;
+
+  padding: 1.5rem;
+
+  box-shadow: 6px 6px 10px #d1d9e6, -6px -6px 10px #fff,
+    inset 6px 6px 10px #d1d9e6, inset -6px -6px 10px #fff;
+
+  width: 300px;
+  /* background-color: var(--container-color); */
+  border-radius: 20px;
+  text-align: center;
+  margin-top: 20px;
+  /* padding: 15px; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.profile-container img {
+  width: 100px;
+  height: 100px;
+  border-radius: 40px;
+}
+
+.profile-container h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 5px;
+  color: #0e0c0db0;
+  margin-bottom: 0;
+}
+
+.profile-container h6 {
+  color: #2b2b2b;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.git-container {
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  background: transparent;
+  padding: 0.25rem;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: inset 6px 6px 10px #d1d9e6, inset -6px -6px 10px #fff;
+
+  width: 300px;
+  /* background-color: var(--container-color);
+  border-radius: 20px; */
+  margin-top: 22px;
+  display: flex;
+  justify-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.git-detail h5 {
+  cursor: pointer;
+
+  background-color: transparent;
+
+  box-shadow: 6px 6px 10px #d1d9e6, -6px -6px 10px #fff;
+
+  margin-top: 24px;
+  font-size: 12px;
+  font-weight: bold;
+  /* background: #0e0c0db0; */
+  color: #0e0c0db0;
+  border-radius: 116px;
+  margin-bottom: 5px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.git-detail h6 {
+  font-size: 12px;
+  font-weight: bold;
+  color: #0e0c0db0;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+footer {
+  position: relative;
+  text-align: center;
+  color: #6767694a;
+}
+
+footer a {
+  text-decoration: none;
 }
